# CPP_Exercises

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TP10.md  TP10.org  TP11.md  TP2.md  TP3.md  TP4.md  TP5.md  TP6.md  TP8.md
TP1/: CMakeLists.txt  TP1.md  debugger  debugger.cpp  helloworld  helloworld.cpp
json/: cpp2023.json
lib/: Consumable.hpp  Cupboard.hpp  Ingredient.hpp  InstanceCounter.cpp  InstanceCounter.hpp  Person1.hpp  Person2.hpp  Person3.hpp  Recipe.hpp  Unit.hpp  concatenate.cpp  concatenate.hpp  constexpr.cpp  image_io.hpp  lib.hpp
resources/slides/: cm1.pptx
src/: ArrayNode.cpp  ArrayNode.hpp  Board.hpp  Card.hpp  InstanceCounter.cpp  InstanceCounter.hpp  IntLeaf.cpp  IntLeaf.hpp  JsonParser.cpp  JsonParser.hpp  Kitchen.cpp  Kitchen.hpp  Leaf.cpp  Leaf.hpp  Main.cpp  Monster.hpp  Node.cpp  Node.hpp  NodeKind.cpp  NodeKind.hpp  ObjectNode.cpp  ObjectNode.hpp  OptionalString.hpp  PC.h  Pokeball.cpp  Pokeball.h  Pokedex.cpp  Pokedex.h  Pokemon.cpp  Pokemon.h  Spell.hpp  StringLeaf.cpp  StringLeaf.hpp  Trainer.cpp  Trainer.h  Trap.hpp  ex1.cpp  ex1.hpp  ex3.hpp  fuse_images.hpp  (+6 more)
tests/: Test-1.cpp  Test-10.cpp  Test-11.cpp  Test-12.cpp  Test-2.cpp  Test-3.cpp  Test-4.cpp  Test-5.cpp  Test-6.cpp  Test-7.cpp  Test-8.cpp  Test-9.cpp  Tests-01-Pixel.cpp  Tests-01-Units.cpp  Tests-01-image.cpp  Tests-0101-image-constructor.cpp  Tests-0102-image-accessor.cpp  Tests-0103-image-additions.cpp  Tests-0104-image-functor-constructor.cpp  Tests-0105-image-io.cpp  Tests-02-Image.cpp  Tests-02-Ingredients.cpp  Tests-02-image-io.cpp  Tests-03-Consumables.cpp  Tests-03-additions.cpp  Tests-03-image-io.cpp  Tests-03-procedural-images.cpp  Tests-0301-pixels-struct.cpp  Tests-0302-pixel-sizes.cpp  Tests-04-Cupboard.cpp  Tests-04-pixels.cpp  Tests-04-procedural-images.cpp  Tests-0401-blending-RGBA+RGBA.cpp  Tests-0403-blending-RGB+RGBA.cpp  Tests-0403-from.cpp  Tests-0406-blending-RGB-RGB.cpp  Tests-05-Recipes.cpp  Tests-05-blending.cpp  Tests-05-reading-images.cpp  Tests-0501-blending-RGBA+RGBA.cpp  (+57 more)
tests/ex1/: test10-move1.md  test11-splice.cpp  test12-pairwise-concat1.cpp  test12-pairwise-spliced.cpp  test13-move2.md  test13-pairwise-concat2.cpp  test14-move2.md
tests/ex2/: test20-move3.md  test21-uge-unique-ptr.cpp  test22-uge-uptr-copy-move.cpp  test22-uge-uptr-copy.cpp  test23-uge-uptr-move.cpp  test23-uptr-deref.cpp  test24-tree-using-uptr.cpp  test24-uptr-deref.cpp  test25-tree-using-uptr.cpp
tests/ex3/: test30-constexpr.md  test31-fibonacci.cpp  test32-content-of-same-type.cpp  test33-add-all.cpp  test34-has-random-access.cpp  test35-access.cpp
tp1/: TP1.md  bonjour
tp1/ex1/: main.cpp
tp1/ex3/: main.cpp  utils.cpp  utils.hpp
tp10/: TP10.md
tp10/lib/: image_lib.cpp  image_lib.hpp  stb_image_write.h
tp10/src/: blend.cpp  convert_test.cpp  image.hpp  mandelbrot.cpp  midgray.cpp  pixels.hpp  transparency_mask.cpp
tp11/: TP11.md
tp11/src/: factory.cpp  tostring.cpp
tp12/: TP12.md
tp12/cmake/: run_tests.cmake
tp12/ex1/src/: qcm.hpp
tp12/ex1/tests/: qcm.cpp
tp12/ex2/src/: HybridArray.hpp
tp12/ex2/tests/: 00-hybrid_array.cpp  01-static_size.cpp  01x-static_size-compile-time.cpp  02-push_back.cpp  03-size.cpp  03x-size-const.cpp  04-idx-operator.cpp  04x-idx-operator-const.cpp  05-static-storage.cpp  06-dynamic-storage.cpp  07-vector-specialization.cpp  07x-construction.cpp  08-variadic-constructors.cpp
tp12/ex3/src/: 00-rm-elems-for.hpp  01-rm-elems-alg.hpp  02-hashing.hpp  03-which-container.hpp  04-store-fcn.hpp  05-sum.hpp  06-templates.hpp
tp12/ex3/tests/: 00-rm-elems-for.cpp  01-rm-elems-alg.cpp  02-hashing.cpp  03-which-container.cpp  04-store-fcn.cpp  05-sum.cpp  06-templates.cpp
tp2/: TP2.md
tp3/: CMakeLists.txt  TP3.md
tp3/3-hrsoft/: CMakeLists.txt  HRSoftMain.cpp  HRSoftTests.cpp
tp3/3-hrsoft/HRSoft/: Department.hpp  Employee.hpp  HRSoftSystem.hpp
tp4/: CMakeLists.txt  TP4.md
tp4/cmake/: configure_targets.cmake  run_tests.cmake  run_tests.sh.in
tp4/ex1/src/: qcm.hpp
tp4/ex1/tests/: qcm.cpp
tp4/ex2/tests/: 01-phone-number.cpp  02-is-valid.cpp  03-const-is-valid.cpp  04-index.cpp  05-index-out.cpp  06-const-index.cpp  07-multi-inclusions.cpp  11-print-out.cpp  12-print-any-stream.cpp  13-print-concat.cpp  21-phone-book-entry.cpp  22-accessors.cpp  23-return-refs.cpp  24-const-accessors.cpp  25-equality.cpp  26-const-equality.cpp  31-phone-book.cpp  32-add-entry.cpp  33-get-entry.cpp  34-valid-entry.cpp  35-unique-entry.cpp  36-no-desinstanciation.cpp
tp4/ex3/src/: 01-types.hpp  02-vector.hpp
tp4/ex3/tests/: 01-types.cpp  02-vector.cpp
tp5/: CMakeLists.txt  TP5.md
tp5/2-ptr/: CopyablePtr.hpp  Object.hpp  main.cpp
tp5/3-recipes/: ProgramData.cpp  ProgramData.hpp  main.cpp
tp6/: CMakeLists.txt  TP6.md
tp6/1-recipes/: Material.hpp  ProgramData.cpp  ProgramData.hpp  Recipe.hpp
tp7/: CMakeLists.txt  TP7.md
tp7/dungeon/: Character.hpp  Dungeon.cpp  Entity.hpp  Item.hpp  Logger.hpp  Potion.hpp  Random.cpp  Random.hpp  Trap.hpp
tp8/: TP8.md
tp8/cmake/: backup_src.cmake  run_tests.cmake
tp8/ex1/src/: qcm.hpp
tp8/ex1/tests/: qcm.cpp
tp8/ex2/lib/: InstanceCounter.hpp
tp8/ex2/src/: StringInstancePair.hpp  alias.hpp
tp8/ex2/tests/: 01-ptr-alias.cpp  10-pair.cpp  11-stable.cpp  12-destr.cpp  12-destr1.cpp  13-copy.cpp  13-destr2.cpp  14-copy.cpp
tp8/ex3/src/: Base.hpp  DerivedInt.hpp  DerivedString.hpp
tp8/ex3/tests/: 01-base.cpp  02-derived.cpp  03-inherit.cpp  04-print.cpp  05-tostring.cpp  05-type.cpp  06-equality.cpp  06-type.cpp  07-equality.cpp
tp9/: TP9.md
